# wasmkeeper

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  data.json  main.cpp  vcpkg.json
example/: func.c  func.wasm
include/wasmkeeper/: request.hpp  utils.hpp  vm.hpp  wasmedgepp.hpp
src/: main.rs
src/wasmkeeper/: utils.cpp  vm.cpp  wasmedgepp.cpp
