[package]
name = "wasmkeeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
nix = "0.25"
local-ip-address = "0.5.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
wasmedge-sdk = "0.7.1"
